Add complete body content with all sections

--- a/index.html
+++ b/index.html
@@ -72,3 +72,109 @@
     </style>
 </head>
 <body>
+        <!-- Navigation -->
+    <nav>
+        <div class="nav-container">
+            <a href="#" class="logo">Sarvesh V.</a>
+            <div class="nav-links">
+                <a href="#about">About</a>
+                <a href="#skills">Skills</a>
+                <a href="#projects">Projects</a>
+                <a href="#contact">Contact</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="hero" id="about">
+        <div class="hero-content">
+            <div class="hero-text">
+                <h1>Hi, I'm <span>Sarvesh</span> - Data Engineer & Analyst</h1>
+                <p>I build robust data pipelines and transform complex datasets into actionable insights. Currently a Data Product Owner at Lloyds, specializing in Snowflake, dbt, and modern data architecture.</p>
+                <div class="cta-buttons">
+                    <a href="#projects" class="btn btn-primary">View Projects</a>
+                    <a href="#contact" class="btn btn-secondary">Contact Me</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section class="skills" id="skills">
+        <div class="container">
+            <h2>Technical Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <i class="fas fa-database"></i>
+                    <h3>Data Warehousing</h3>
+                    <p>Snowflake, BigQuery, Redshift, PostgreSQL</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-code"></i>
+                    <h3>Programming</h3>
+                    <p>Python, SQL, Bash, R</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-sync-alt"></i>
+                    <h3>Data Transformation</h3>
+                    <p>dbt, Apache Spark, Airflow</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-chart-line"></i>
+                    <h3>Analytics & BI</h3>
+                    <p>Tableau, Power BI, Looker</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section class="projects" id="projects">
+        <div class="container">
+            <h2>Featured Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <h3>TSLA Stock Analytics Pipeline</h3>
+                    <p>End-to-end data pipeline using medallion architecture for Tesla stock analysis with technical indicators and trend classification.</p>
+                    <div class="tech-stack">
+                        <span>Snowflake</span>
+                        <span>dbt</span>
+                        <span>Python</span>
+                        <span>SQL</span>
+                    </div>
+                    <a href="https://github.com/ksarveshvenkatachalam-lang/tsla-stock-analytics-pipeline" target="_blank" class="btn btn-secondary">View Code</a>
+                </div>
+                <div class="project-card">
+                    <h3>E-commerce ELT Pipeline</h3>
+                    <p>Modern ELT data pipeline demonstrating Extract-Load-Transform methodology for e-commerce sales analytics.</p>
+                    <div class="tech-stack">
+                        <span>Snowflake</span>
+                        <span>dbt</span>
+                        <span>ELT</span>
+                        <span>Python</span>
+                    </div>
+                    <a href="https://github.com/ksarveshvenkatachalam-lang/ecommerce-sales-elt-pipeline" target="_blank" class="btn btn-secondary">View Code</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
+        <div class="contact-content">
+            <h2>Let's Connect</h2>
+            <p>I'm currently open to new opportunities in data engineering and analytics. Feel free to reach out!</p>
+            <div class="social-links">
+                <a href="https://github.com/ksarveshvenkatachalam-lang" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://linkedin.com/in/sarveshvenkatachalam" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="mailto:sarvesh.venkatachalam@example.com"><i class="fas fa-envelope"></i></a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Sarvesh Venkatachalam. All rights reserved.</p>
+    </footer>
+</body>
+</html>
